// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reviewOfSystems reducer > toggles yes or no 1`] = `
{
  "Cardiovascular/Hematological": {
    "Chest pain": "",
    "Easy bleeding": "",
    "Easy bruising": "",
    "Palpitations": "",
  },
  "Dermatologic": {
    "Skin changes": "",
  },
  "Eyes/Ears": {
    "Hearing changes": "",
    "Vision changes": "",
  },
  "Gastrointestinal": {
    "Abdominal pain": "",
    "Constipation": "",
    "Diarrhea": "",
    "Nausea": "",
    "Vomiting": "",
  },
  "General": {
    "Chills": "",
    "Fatigue": "",
    "Fever": "",
    "Weight changes": "YES",
  },
  "Musculoskeletal": {
    "Joint pain": "",
    "Muscle pain": "",
  },
  "Neurological": {
    "Dizziness": "",
    "Headache": "",
    "Loss of consciousness": "",
    "Numbness": "",
    "Tingling": "",
  },
  "Psychiatric": {
    "Mood changes": "",
  },
  "Respiratory": {
    "Cough": "",
    "Shortness of breath": "",
  },
  "Urinary": {
    "Dysuria": "",
    "Hematuria": "",
    "Urinary frequency": "",
  },
}
`;

exports[`reviewOfSystems reducer toggles yes or no 1`] = `
Object {
  "Cardiovascular/Hematological": Object {
    "Chest pain": "",
    "Easy bleeding": "",
    "Easy bruising": "",
    "Palpitations": "",
  },
  "Dermatologic": Object {
    "Skin changes": "",
  },
  "Eyes/Ears": Object {
    "Hearing changes": "",
    "Vision changes": "",
  },
  "Gastrointestinal": Object {
    "Abdominal pain": "",
    "Constipation": "",
    "Diarrhea": "",
    "Nausea": "",
    "Vomiting": "",
  },
  "General": Object {
    "Chills": "",
    "Fatigue": "",
    "Fever": "",
    "Weight changes": "YES",
  },
  "Musculoskeletal": Object {
    "Joint pain": "",
    "Muscle pain": "",
  },
  "Neurological": Object {
    "Dizziness": "",
    "Headache": "",
    "Loss of consciousness": "",
    "Numbness": "",
    "Tingling": "",
  },
  "Psychiatric": Object {
    "Mood changes": "",
  },
  "Respiratory": Object {
    "Cough": "",
    "Shortness of breath": "",
  },
  "Urinary": Object {
    "Dysuria": "",
    "Hematuria": "",
    "Urinary frequency": "",
  },
}
`;
